--- a/index.html
+++ b/index.html
@@ -1,40 +1,24 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <script src="./js/jquery-3.4.1.min.js"></script>
-    <title>URL Shortener</title>
+    <title>Misalink</title>
   </head>
   <body>
-        <div class="container">
-            <h3 class="title">URL Shortener</h3>
-            <div class="input-group mb-3">
-                <input id="input" type="text" class="form-control shadow-none" 
-                    placeholder="Enter your url..." 
-                    aria-label="Recipient's username" 
-                    aria-describedby="button-addon2">
-                <div class="input-group-append">
-                    <button
-                        id="creat"
-                        class="btn btn-info shadow-none" 
-                        type="button" id="button-addon2">
-                            Create</button>
-                </div>
+        <img src="/icons/logo.png" alt="logo">
+        <form id='form'>
+            <div>
+                <input type="text" id='url' placeholder="https://example.com" required>
+                <input type="password" id='password' placeholder="password...">
             </div>
-            <div class="input-group mb-3 result">
-                <div class="input-group-prepend">
-                  <span class="input-group-text">Result</span>
-                </div>
-                <input id="input-result" type="text" class="form-control shadow-none" aria-label="Amount (to the nearest dollar)" value="">
-                <div class="input-group-append">
-                    <button id="copy" class="btn shadow-none">
-                        <img id="copy-img" src="./icons/copy.png" alt="copy">
-                    </button>
-                </div>
-            </div>
+            <button id='create-button'>Create</button>
+        </form>
+        <div class='result-wrapper'>
+            <input type="text" id="result" value="Result">
+            <button id='copy-button'>Copy</button>
         </div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
         <script src="./js/app.js"></script>
   </body>
 </html>
