--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Misalink</title>
   </head>
   <body>
-        <img src="/icons/logo.png" alt="logo">
+        <a href="https://www.misalink.tk" target="blank">
+            <img src="/icons/logo.png" alt="logo">
+        </a>
         <form id='form'>
             <div>
                 <input type="text" id='url' placeholder="https://example.com" required>
@@ -18,7 +20,7 @@
             <input type="text" id="result" value="Result">
             <button id='copy-button'>Copy</button>
         </div>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
+        <script src="/js/axios.min.js"></script>
         <script src="./js/app.js"></script>
   </body>
 </html>
